[package]
name = "gqlog"
version = "1.0.3"
authors = ["Stephen Belanger <admin@stephenbelanger.com>"]
description = " 👾 filter your json logs with graphql 👾 "
repository = "https://github.com/qard/gqlog"
readme = "README.md"
license = "MIT"

keywords = [ "log", "graphql", "gql", "filter" ]
categories = [ "command-line-utilities", "text-processing" ]

[lib]
name = "gqlog"
path = "src/lib.rs"

[[bin]]
name = "gqlog"
path = "src/bin/main.rs"

[dependencies]
graphql-parser = "0.2.0"
serde = "^1"
serde_json = "^1"
